Add date of birth user search filter
